--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <button>Mulai sewa mobil</button>
           </div>
         </div>
-        <div class="grid">
+        <div class="mobil">
           <!--<img src="./assets/images/img_car.png" alt="mercy" />-->
         </div>
       </section>
