--- a/index.html
+++ b/index.html
@@ -1,57 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="title" content="Landing Page" />
-    <meta name="keywords" http-equiv="keywords" content="car, rental" />
-    <meta name="description" http-equiv="description" content="Welcome to car rental web page" />
-    <title>Landing Page - Car Rental</title>
 
-    <link rel="stylesheet" href="lib/bootstrap-5.2.3-dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="lib/font-awesome-6.2.1/css/all.min.css" />
-    <link rel="stylesheet" href="assets/css/landing-page.css" />
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="title" content="Landing Page">
+  <meta name="keywords" http-equiv="keywords" content="car, rental" />
+  <meta name="description" http-equiv="description" content="Welcome to car rental web page" />
+  <title>Landing Page - Car Rental</title>
 
-  <body>
-    <header>
-      <nav></nav>
-    </header>
+  <link rel="stylesheet" href="lib/bootstrap-5.2.3-dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="lib/font-awesome-6.2.1/css/all.min.css">
+  <link rel="stylesheet" href="assets/css/landing-page.css">
+</head>
 
-    <main>
-      <!--Feature-Banner-->
-      <section class="banner">
-        <div class="grid">
-          <div class="header">
-            <div class="text">
-              <h1 class="judul">Sewa & Rental mobil Terbaik di kawasan (lokasimu)</h1>
-              <p class="deskripsi">
-                selamat datang di binar car rental. Kami menyediakan mobil berkualitas terbaik
-                dengan harga terjangkau. Selalu siap melayani kebutuhanmu untuk sewa mobil selama 24
-                jam.
-              </p>
-            </div>
-            <button>Mulai sewa mobil</button>
+<body>
+  <header>
+    <nav></nav>
+  </header>
+  
+  <main>
+    <!--Feature-Banner-->
+    <section class="banner">
+      <div class="grid gridtext">
+        <div class="parent-text">
+          <div class="text">
+            <h1 class="judul">Sewa & Rental mobil Terbaik di kawasan (lokasimu)</h1>
+            <p class="deskripsi">
+              selamat datang di binar car rental. Kami menyediakan mobil berkualitas terbaik
+              dengan harga terjangkau. Selalu siap melayani kebutuhanmu untuk sewa mobil selama 24
+              jam.
+            </p>
           </div>
+          <button>Mulai sewa mobil</button>
         </div>
-        <div class="grid">
-          <div class="mobil">
-            <!--<img src="./assets/images/img_car.png" alt="mercy" />-->
-          </div>
+      </div>
+      <div class="grid">
+        <div class="mobil">
+          <img src="assets/images/img_car.png" alt="mercy" />
         </div>
-      </section>
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
-    </main>
+      </div>
+    </section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+  </main>
 
-    <footer></footer>
+  <footer></footer>
 
-    <script src="lib/jquery-3.6.3/jquery-3.6.3.min.js"></script>
-    <script src="lib/bootstrap-5.2.3-dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/landing-page.js"></script>
-  </body>
+  <script src="lib/jquery-3.6.3/jquery-3.6.3.min.js"></script>
+  <script src="lib/bootstrap-5.2.3-dist/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/js/landing-page.js"></script>
+</body>
+
 </html>
